// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home actions fetch popular photos 1`] = `
Array [
  Object {
    "payload": Object {
      "popularPhotos": Array [
        Object {
          "createdAt": "2017-11-04T19:49:54.136Z",
          "id": 18561785,
          "thumbnail": Object {
            "uri": "https://reactjs.org/logo-og.png",
          },
        },
        Object {
          "createdAt": "2017-11-04T19:31:41.206Z",
          "id": 18561778,
          "thumbnail": Object {
            "uri": "https://reactjs.org/logo-og.png",
          },
        },
      ],
    },
    "type": "home/FETCH_PHOTOS_GRID",
  },
]
`;

exports[`home actions fetch user data 1`] = `
Array [
  Object {
    "payload": Object {
      "user": Object {
        "bio": Array [
          Object {
            "highlighted": false,
            "value": "Motivation to become the best version of you!  💙💪🌎. It's",
          },
          Object {
            "highlighted": true,
            "value": " #HealthyHolidays",
          },
          Object {
            "highlighted": false,
            "value": " ❄️🏋️‍♀️. Share your photos all month long to be featured!. 👻 Snapchat",
          },
          Object {
            "highlighted": true,
            "value": " @PumpUp",
          },
          Object {
            "highlighted": false,
            "value": ". Get your",
          },
          Object {
            "highlighted": true,
            "value": " #TeamPumpUp",
          },
        ],
        "createdAt": "2014-02-03T07:21:44.372Z",
        "id": 318381,
        "name": "pumpup",
        "photos": Array [],
        "thumbnail": Object {
          "uri": "https://reactjs.org/logo-og.png",
        },
      },
    },
    "type": "home/FETCH_USER",
  },
  Object {
    "payload": Object {
      "photos": Array [
        Object {
          "createdAt": "2017-11-04T19:49:54.136Z",
          "id": 18561785,
          "thumbnail": Object {
            "uri": "https://reactjs.org/logo-og.png",
          },
        },
        Object {
          "createdAt": "2017-11-04T19:31:41.206Z",
          "id": 18561778,
          "thumbnail": Object {
            "uri": "https://reactjs.org/logo-og.png",
          },
        },
      ],
    },
    "type": "home/FETCH_PHOTOS_SLIDER",
  },
]
`;
